Atualizado header para fixo

--- a/site/header.css
+++ b/site/header.css
@@ -7,6 +7,8 @@ body {
 }
 /* Começo do header */
 .header {
+    position: fixed;
+    background-color: #f0f0f0;
     width: 100%;
     height: 125px;
     font-family: 'Roboto Mono', monospace;
