--- a/site/style.css
+++ b/site/style.css
@@ -186,3 +186,103 @@ p {
 
 /* Fim da página de surgimento */
 
+
+/* Início da página de benefícios */
+.beneficios {
+    width: 100%;
+    height: 80vh;
+}
+
+.beneficios img {
+   position: absolute;
+}
+.beneficios h2 {
+    font-family: 'Great Vibes', cursive;
+    font-size: 70px;
+    font-weight: 300;
+    letter-spacing: 3px;
+    color: white;
+    text-align: center;
+}
+
+.beneficios .conteudo {
+    display: flex;
+    gap: 3%;
+    justify-content: center;
+}
+
+.beneficios .caixa {
+    width: 15%;
+    height: 300px;
+    border-radius: 20px;
+    background-color: #f0f0f0;
+    box-shadow: rgb(255, 255, 255, 0.5) 5px 0 5px;
+}
+
+.beneficios h3 {
+    color: #151515;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 55%;
+}
+
+.beneficios .botao button {
+    background-color: #f0f0f0;
+    border: none;
+    font-size: 30px;
+    margin-left: 80%;
+    margin-top: 30%;
+}
+
+#tela2 {
+    padding-left: 8%;
+    padding-right: 8%;
+    margin-top: 15%;
+}
+
+#tela2 p, #tela4 p, #tela6 p {
+    color: #151515;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 15px;
+    text-align: center;
+}
+
+#tela2 button, #tela4 button {
+    background-color: #f0f0f0;
+    border: none;
+    font-size: 35px;
+    margin-left: 88%;
+    margin-bottom: 5%;
+}
+
+#tela4 {
+    padding-left: 8%;
+    padding-right: 8%;
+    margin-top: 24%;
+}
+
+#tela6 {
+    padding-left: 8%;
+    padding-right: 8%;
+    margin-top: 15%;
+}
+
+#tela6 button {
+    background-color: #f0f0f0;
+    border: none;
+    font-size: 35px;
+    margin-left: 88%;
+}
+
+.info {
+    color: #f0f0f0;
+    font-family: 'Roboto', sans-serif;
+    margin-top: 3%;
+    text-align: center;
+    font-size: 15px;
+}
+/* Fim da página de benefícios */
+
