--- a/site/header.css
+++ b/site/header.css
@@ -15,10 +15,17 @@ body {
     font-size: 18px;
 }
 
+.header a {
+    text-decoration: none;
+    color: #151515;
+    overflow-y: hidden;
+
+}
+
 .header img {
-    margin-top: 2.5%;
-    width: 15%;
-    height: 15%;
+    margin-top: 20%;
+    width: 100%;
+    height: 65%;
 }
 
 .container {
