--- a/site/style.css
+++ b/site/style.css
@@ -330,9 +330,6 @@ p {
     margin-left: 2%;
 }
 
-/* summary {
-    list-style: none;
-} */
 
 .caixas img{
     margin-left: 2%;
@@ -341,13 +338,6 @@ p {
     margin-top: 1.3%;
 }
 
-.conclusao p {
-    width: 80%;
-    margin-left: 10%;
-    margin-top: 6%;
-    font-size: 25px;
-    font-weight: 300;
-}
 
 .caixinha {
     display: flex;
@@ -357,4 +347,15 @@ p {
     margin-left: 0.5%;
     font-size: 20px;
 }
+
+.conclusao p {
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 6%;
+    font-size: 25px;
+    font-weight: 300;
+    margin-bottom: 7%;
+}
 /* Fim da página de materiais */
+
+
