--- a/site/header.css
+++ b/site/header.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
+
 
 body {
     margin: 0;
@@ -13,6 +15,7 @@ body {
     height: 125px;
     font-family: 'Roboto Mono', monospace;
     font-size: 18px;
+    
 }
 
 .header a {
@@ -74,3 +77,27 @@ body {
 
 }
 /* Fim do header */
+
+.perfil {
+    width: 100%;
+}
+
+.boasVindas {
+    display: flex;
+    margin-left: 80%;
+}
+
+.boasVindas p {
+    margin-top: 25%;
+    font-family: 'Cookie', cursive;
+    font-size: 25px;
+    letter-spacing: 3px;
+}
+
+.perfil a {
+    text-decoration: underline; 
+    display: flex; 
+    margin-top: 29%; 
+    margin-left: 15%; 
+    font-size: 10px;
+}
