--- a/site/public/css/faq.css
+++ b/site/public/css/faq.css
@@ -19,11 +19,23 @@
     display: flex;
     width: 100%;
     position: absolute;
-    margin-top: 18%;
+    margin-top: 16%;
     flex-direction: column;
     align-items: center;
 }
 
 details {
-    margin-bottom: 3.5%;
+    margin-bottom: 3%;
+    width: 37%;
+    height: 10%;
+    border-radius: 5px;
+    padding: 10px;
+    border: 0.1em solid;
+    stroke: #0000 ;
+    border-color: black 1px solid;
+}
+
+.conteudo {
+    color: #6a6a6a;
+    text-align: center;
 }
