--- a/site/public/css/header.css
+++ b/site/public/css/header.css
@@ -82,16 +82,17 @@ button {
 /* Fim do header */
 
 .perfil {
-    width: 100%;
+    width: 25%;
 }
 
 .boasVindas {
     display: flex;
-    margin-left: 80%;
+    justify-content: end;
+
 }
 
 .boasVindas p {
-    margin-top: 25%;
+    margin-top: 18%;
     font-family: 'Cookie', cursive;
     font-size: 25px;
     letter-spacing: 3px;
@@ -100,7 +101,21 @@ button {
 .perfil a {
     text-decoration: underline; 
     display: flex; 
-    margin-top: 29%; 
+    margin-top: 20%; 
     margin-left: 15%; 
     font-size: 10px;
+}
+
+.navBarUsuario {
+    list-style: none;
+    width: 20%;
+    display: flex;
+    justify-content: space-around;
+    gap: 10%;
+    margin-top: 4.5%;
+    margin-left: 40%;
+}
+
+.navBarUsuario a {
+    text-decoration: underline;
 }
