--- a/site/public/css/paginaUsuario.css
+++ b/site/public/css/paginaUsuario.css
@@ -32,6 +32,11 @@ button {
     
 }
 
+.pedido button:hover {
+    background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(249, 83, 255);
+}
+
 
 .conteudo {
     width: 100%;
@@ -78,8 +83,8 @@ button {
 }
 
 .botao {
-  width: 23%;
-  height: 25px;
+  width: 24%;
+  height: 30px;
   margin-top: 6%;
   margin-left: 35%;
 
@@ -89,9 +94,16 @@ button {
   width: 100%; 
   display: flex; 
   flex-direction: row;
-  padding-left: 4px;
+  padding-left: 7px;
+  padding-top: 4px;
   border-radius: 5px;
 }
+
+.botao button:hover {
+  border: 2px solid rgb(133, 133, 133);
+
+}
+
 
 #numero, #numero2, #numero3, #numero4, #numero5, #numero6, #numero7, #numero8, #numero9 {
   margin-left: 8%;
