Título na página de pesquisar

--- a/site/public/css/pesquisar.css
+++ b/site/public/css/pesquisar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
 .conteudo {
     width: 100%;
     display: flex;
@@ -5,16 +7,23 @@
     flex-direction: column;
 }
 
+.conteudo span {
+    font-family: 'Great Vibes', cursive;
+    margin-top: 14%;
+    font-size: 40px;
+    margin-bottom: 1%;
+
+} 
+
 select {
-    width: 30%;
-    margin-top: 15%;
+    width: 20%;
     border-radius: 5px;
     padding: 5px;
     margin-bottom: 1%;
 }
 
 button {
-    width: 30%;
+    width: 20%;
     font-family: 'Roboto Mono', monospace;
     border-radius: 5px;
     padding: 3px;
@@ -28,7 +37,7 @@ button:hover {
 }
 
 #imagem {
-    margin-top: 4%;
+    margin-top: 2%;
     display: flex;
     justify-content: center;
     
