Adicionado gráfico na página de votação

--- a/site/public/css/votacao.css
+++ b/site/public/css/votacao.css
@@ -65,3 +65,11 @@ button:hover {
     background-color: rgb(0, 0, 0);
     border: 2px solid rgb(249, 83, 255);
 }
+
+.grafico {
+    width: 50%;
+    height: 30%;
+    margin-top: 5%;
+    margin-bottom: 4%;
+    margin-left: 25%;
+}
