--- a/site/public/css/simulacao.css
+++ b/site/public/css/simulacao.css
@@ -7,6 +7,10 @@ button {
     cursor: pointer;
 }
 
+#botaoSimulacao:hover {
+    background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(249, 83, 255);
+}
 
  /* .conteudo {
     font-family: 'Roboto Mono', monospace;
